--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.5.0",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "vite-svg-loader": "^5.1.0"
     }
 }
